# synapp

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  third-party-LICENSE.txt
examples/: record_data.py  scan_for_devices.py
examples/example_data/2024_01_18_00_49_28_muse-d386/: data.pkl  recording_info.yaml
examples/example_data/2024_01_18_13_01_17_muse-d386/: data.pkl  recording_info.yaml
examples/jupyter_notebooks/: scan_record_process.ipynb
synapp/core/: EEGNet_Modify.py  action_management.py  data_parsing.py  enums.py  filtering.py  logging.py  machine_learning.py  plotting.py  utilities.py
synapp/core/devices/: device.py  device_scanner.py
synapp/misc/: tqdm_provider.py
synapp/utilities/: README.md  file_utilities.py
tests/: test_plotting.py  test_utils.py
